# Agentic-Local-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  llm_settings.py  main.py  note_engine.py  pandas_query_engine.py  pdf.py  prompts.py  pyproject.toml  streamlit_app.py  vector_db.py
.github/workflows/: ci.yml
apps/: cli.py
apps/api/: main.py
apps/web/: streamlit_app.py
docs/: development.md  domain_model.md
infrastructure/: README.md
infrastructure/migrations/: 002_create_domain_schema.sql
scripts/: run_migrations.py  seed_example_project.py
tests/: test_api_health.py  test_domain_repositories.py  test_notes.py  test_settings.py
